external-ingress/authelia-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.juicewizerd.com`)
      kind: Rule
      services:
        - kind: Service
          name: authelia 
          namespace: default
          port: 9091
  tls:
    secretName: juicewizerd-com-tls
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: default
spec:
  externalName: 192.168.1.95
  type: ExternalName
  ports:
    - port: 9091
