external-ingress/kavita-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kavita
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`kavita.juicewizerd.com`)
      kind: Rule
      services:
        - kind: Service
          name: kavita 
          namespace: default
          port: 5000
      middlewares:
        - name: authelia-2fa
  tls:
    secretName: juicewizerd-le-com-tls
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: default
spec:
  externalName: 192.168.1.93
  type: ExternalName
  ports:
    - port: 5000
